Prevent controls jumping down on initial filter selection.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@13752 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/assets/css/wdk-filter-param.css
+++ b/View/assets/css/wdk-filter-param.css
@@ -285,6 +285,7 @@
 .filter-items[data-total]:before {
   content: attr(data-total) " selected ";
   font-weight: bold;
+  line-height: 2em;
 }
 .filter-items li {
   display: inline-block;
